# zero-mlx

./: .gitignore  .pre-commit-config.yaml  API_TEST_MATRIX.md  ARCHITECTURE.md  COMPILER_TEST_PARITY.md  COMPLIANCE.md  MLX_MISSING_API.md  MLX_TODO.md  README.md  SEMANTIC_PLAN.md  TODO_PLAN.md  check_compliance_ast.py  check_compliance_ast2.py  check_compliance_ast3.py  check_compliance_ast4.py  check_compliance_score.py  generate_missing_api.py  mlx_api_snapshot.json  pyproject.toml  requirements.txt  update_readme.py
.github/workflows/: ci.yml
scripts/: check_api_parity.py  check_api_snapshot.py  check_compiler_test_completeness.py  generate_api_matrix.py  generate_snapshot.py
src/zero_mlx/: __init__.py  array.py  array_interface.py  array_iterator.py  array_like.py  array_repr.py  at_mocker.py  convolutions.py  device.py  dlpack.py  dtypes.py  export.py  fft.py  info.py  linalg.py  metal.py  mlx_random.py  new_ops.py  ops.py  ops_patch.py  random_state.py  utils.py
tests/: conftest.py  test_mlx.py  test_nn.py  test_ops_parity.py  test_optimizers.py
tests/official/: test_array.py  test_array_iterator_at.py  test_autograd.py  test_bf16.py  test_blas.py  test_compile.py  test_constants.py  test_convolutions.py  test_device.py  test_double.py  test_eval.py  test_export.py  test_fft.py  test_linalg.py  test_memory_io.py  test_missing_branches.py  test_missing_branches_at.py  test_missing_namespaces.py  test_new_ops.py  test_nn.py  test_nn_layers.py  test_nn_layers_transformers.py  test_ops.py  test_optimizers.py  test_random.py  test_reduce.py  test_submodules.py  (+4 more)
(+32 files in other folders)
